--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="white2" id="white2">
 
                 <li>happy holidays, dear lisa,</li>
-                <li>i made this for you -</li>
+                <li>i made this for <div class="colourme">you</div> -</li>
 
             <p id="clickity">(click the present)</p>
              
@@ -51,7 +51,7 @@
             <div class="white3" id="white3">
 
                 <li>a poem and a miniature</li>
-                <li>of your kindness true</li>
+                <li>of your kindness <div class="colourme2">true</div></li>
 
             <p id="clickity">(click the cloud)</p>
             
